--- a/Console Basic/2018_06_12_02_State/console/console.vcxproj.filters
+++ b/Console Basic/2018_06_12_02_State/console/console.vcxproj.filters
@@ -1,8 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Games">
+      <UniqueIdentifier>{4f698a3e-a75a-4a47-b62c-8e0547109eca}</UniqueIdentifier>
+    </Filter>
     <Filter Include="ConsoleEx3">
       <UniqueIdentifier>{9a410920-dbe9-4e43-aba9-ab23edd6fe58}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mng">
+      <UniqueIdentifier>{e89d337b-c364-4336-bbd0-dec2acd27b2c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mng\State">
+      <UniqueIdentifier>{a0ae553c-e223-4f5b-b9c7-f8a84e6e514a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\State">
+      <UniqueIdentifier>{a60f228d-adf1-4a83-9c52-1909930d1c29}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Hero">
+      <UniqueIdentifier>{bcff9b8f-cd32-4d63-b9c3-54816973a95a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Unit">
+      <UniqueIdentifier>{752df5a1-f7cc-43fe-bb51-584d06df1258}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Bullet">
+      <UniqueIdentifier>{3c423a1e-17a9-4788-8b63-beb06cfc20ff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Monster">
+      <UniqueIdentifier>{898b2fb6-7e00-4e6e-a050-22c6488dec76}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Effect">
+      <UniqueIdentifier>{cfe98e5a-049f-4a02-a5f9-1c417b585790}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\UI">
+      <UniqueIdentifier>{4366df9f-f312-48d7-a4ac-75abd0f565ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Games\Boss">
+      <UniqueIdentifier>{e0c3f195-82a7-4cd8-aae8-71426b05f351}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -13,6 +46,51 @@
       <Filter>ConsoleEx3</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="State.cpp">
+      <Filter>Mng\State</Filter>
+    </ClCompile>
+    <ClCompile Include="StateCtrl.cpp">
+      <Filter>Mng\State</Filter>
+    </ClCompile>
+    <ClCompile Include="GameState.cpp">
+      <Filter>Games\State</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuState.cpp">
+      <Filter>Games\State</Filter>
+    </ClCompile>
+    <ClCompile Include="LogoState.cpp">
+      <Filter>Games\State</Filter>
+    </ClCompile>
+    <ClCompile Include="Hero.cpp">
+      <Filter>Games\Hero</Filter>
+    </ClCompile>
+    <ClCompile Include="Unit.cpp">
+      <Filter>Games\Unit</Filter>
+    </ClCompile>
+    <ClCompile Include="bullet.cpp">
+      <Filter>Games\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="monster.cpp">
+      <Filter>Games\Monster</Filter>
+    </ClCompile>
+    <ClCompile Include="effect.cpp">
+      <Filter>Games\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="fast-monster.cpp">
+      <Filter>Games\Monster</Filter>
+    </ClCompile>
+    <ClCompile Include="ui.cpp">
+      <Filter>Games\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="boss.cpp">
+      <Filter>Games\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="BossMonser_Left.cpp">
+      <Filter>Games\Monster</Filter>
+    </ClCompile>
+    <ClCompile Include="BossMonster_Right.cpp">
+      <Filter>Games\Monster</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ConsoleEx3\ConWrap.h">
@@ -27,14 +105,58 @@
     <ClInclude Include="..\ConsoleEx3\SysTimer.h">
       <Filter>ConsoleEx3</Filter>
     </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>Mng\State</Filter>
+    </ClInclude>
+    <ClInclude Include="Define.h" />
+    <ClInclude Include="Extern.h" />
     <ClInclude Include="Include.h" />
+    <ClInclude Include="StateCtrl.h">
+      <Filter>Mng\State</Filter>
+    </ClInclude>
+    <ClInclude Include="GameState.h">
+      <Filter>Games\State</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuState.h">
+      <Filter>Games\State</Filter>
+    </ClInclude>
+    <ClInclude Include="LogoState.h">
+      <Filter>Games\State</Filter>
+    </ClInclude>
+    <ClInclude Include="Hero.h">
+      <Filter>Games\Hero</Filter>
+    </ClInclude>
+    <ClInclude Include="Unit.h">
+      <Filter>Games\Unit</Filter>
+    </ClInclude>
+    <ClInclude Include="bullet.h">
+      <Filter>Games\Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="monster.h">
+      <Filter>Games\Monster</Filter>
+    </ClInclude>
+    <ClInclude Include="effect.h">
+      <Filter>Games\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="fast-monster.h">
+      <Filter>Games\Monster</Filter>
+    </ClInclude>
+    <ClInclude Include="ui.h">
+      <Filter>Games\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="boss.h">
+      <Filter>Games\Boss</Filter>
+    </ClInclude>
+    <ClInclude Include="BossMonster_Left.h">
+      <Filter>Games\Monster</Filter>
+    </ClInclude>
+    <ClInclude Include="BosSMonster_Right.h">
+      <Filter>Games\Monster</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\ConsoleEx3\개발일지.txt">
       <Filter>ConsoleEx3</Filter>
     </Text>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
